syntax = "proto3";

package rivet.backend.pkg.module.game_version_get;

import "proto/common.proto";
import "proto/backend/module.proto";

message Request {
	repeated rivet.common.Uuid version_ids = 1;
}

message Response {
	message Version {
		rivet.common.Uuid version_id = 1;
		rivet.backend.module.GameVersionConfig config = 2;
		rivet.backend.module.GameVersionConfigMeta config_meta = 3;
	}

	repeated Version versions = 1;
}
